public/css/ui.css
/* ... */
.project-menu-section:first-child, .project-menu-section:hover:first-child{
	border-top: 0px solid;
	border-radius: 3px 3px 0px 0px;
}

.project-menu-section:last-child, .project-menu-section:hover:last-child{
	border-radius: 0px 0px 3px 3px;
}

.project-menu-section h3{
	font-size: 13pt;
	height: 100%;
	font-weight: normal;
	color: #555;
	margin: 0px;
	padding: 10px;
}

.project-title-updated p{
	color: #AAA;
	position: absolute;
  bottom: 0;
  margin-bottom: 0px;
}

/* Place holders */

.placeholder-screenshot-large{
	background-color: #004594 !important;
	height: 600px;
	box-shadow: inset  0  8px 18px -8px #000, inset  0 -8px 18px -8px #000;
	border: none;
	display: block;
}

.iframe-placeholder-screenshot-large {
    z-index: -1;
}

.placeholder-screenshot{
	background-color: #004594 !important;
	min-height: 300px;
	width: 100%;
}

/* Form */

.standardform{
	padding: 20px 10px;
}

.margined{
	margin-bottom: 10px;
}

.permission{
	padding-left: 0px;
}

.radio-pad{
	padding-left: 20px;
	margin-bottom: 0px !important;
}

.radio-pad p{
	margin: 0px;
	padding: 0px;
	color:#AAA;
}

/* Revisions */

.month-block{
	margin-left: 20px;
	padding-right: 20px;
	padding-left: 0px;
	border-left: 3px solid #444;
}

.month-block:last-child{
	margin-bottom: 10px;
}

.month-block h3{
	font-weight: normal;
	font-size: 10pt;
}

.menu-button{
 margin-bottom: 20px;
}


.button-title{
	font-size: 11pt;
	height: 100%;
	font-weight: bold !important;
	color: #555;
}

.button-keyword{
	font-size: 11pt;
	height: 100%;
	font-weight: bold !important;
	color: #4183c4;
}

.float-right{
	float: right;
}

/*.history-block{
	margin-left: 20px;
	padding-right: 40px;
	padding-left: 0px;
}

.history-block h3{
	font-weight: normal;
	font-size: 10pt;
}*/

#myChart{

}

.log{
	margin-left: 10px;
	padding-right: 10px;
	padding-left: 0px;
	margin-bottom: 10px;
}

.log-icon-block{
	float: left;
	line-height: 42px;
	min-height: 42px;
	min-width: 42px;

}

.log-icon{
	min-width: 32px;
	width: 32px;
	height: 32px;
	margin-right: 5px;
	opacity: 0.75;
	vertical-align: middle;
	text-align: center;
}

.log-block{

	background-color: #FFF;

	min-height: 40px;
	margin: 0px 10px;
	margin-left: 42px;
	border: 1px solid #EEE;
}

.log-block p{
	padding:0px;
	padding-left: 10px;
	padding-bottom: 10px;
	font-size: 10pt;
}

.commit-block{
	background-color: #FFF;
	min-height: 40px;
	margin: 10px;
	border: 1px solid #EEE;
}

.commit-block p{
	padding:0px;
	padding-left: 10px;
	padding-bottom: 10px;
	font-size: 10pt;
}

.commit-revision{
	font-weight: bold;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	padding-left: 10px;
	color: #555;
}

.commit-number{
	font-weight: bold;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #4183c4;
}

.commit-by{
	font-weight: normal;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #DDD;
}

.commit-author{
	font-weight: normal;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #555;
}

.commit-date{
	float: right;
	font-weight: normal;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	padding-right: 10px;
	color: #888;
}

.commit-date-title{
	float: right;
	font-weight: normal;
	font-size: 10pt;;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #888;
}

.comment-keyword-title{
	font-weight: normal;
	font-size: 10pt;;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #888;
}

.comment-date-title{
	float: right;
	font-weight: normal;
	font-size: 10pt;;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #888;
}

.history-author{
	font-weight: bold;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	padding-left: 10px;
	color: #555;
}

.history-action{
	font-weight: normal;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #555;
}

.history-keyword{
	font-weight: bold;
	font-size: 10pt;
	line-height: 40px;
	padding-top: 0px;
	padding-bottom: 0px;
	color: #4183c4;
}

hr.fancy-line {
	float: left;
  border: 0;
  height: 3px;
  min-width: 10px;
  color: #111;
	background-color: #444;
	margin-right: 5px;
	margin-top: 17px;
 }

/* Dashboard */
.margin-bottom{
	margin-bottom: 20px;
}

.project-line{
	border-bottom: 1px solid;
	border-color: #DDD;
}

.project-line:last-child{
	border-bottom: 0px solid;
}

/* Loading */
img.loading{
	margin-left: auto;
    margin-right: auto;
    display: block;
}

.signin {
	max-width: 330px;
	padding: 15px;
	margin: 0 auto;
}

.signin-header {
	margin-bottom: 10px;
	width: 100%;
}

#loginButton {
	width: 100%;
	max-width: 330px;
}

/* Signup */
.uservalidbad {
	background-color: lightcoral;
}

.uservalidgood {
	background-color: lightgreen;
}

.formStyle {
	border-style: solid;
	border-width: 1px;
	border-color: #DDD;
}

.errorMessage {
	color: lightcoral;
}

/***** UIv2 elements *****/
button, button.btn {
	border-radius: 0;
	text-transform: uppercase;
	border: none;
}

.btn-primary, .btn-primary.active, .btn-primary.focus, .btn-primary:active, .btn-primary:focus, .btn-primary:hover, .open > .dropdown-toggle.btn-primary {
	background-color: rgba(5, 58, 165, 1.0);
}

header button.btn {
	background: none;
	font-size: 14pt;
	padding-top: 2px;
}

.btn-profile {
	width: 140px;
}

.form-control {
	border-radius: 0;
}

#ui2-treeview {
	position: fixed;
	bottom: 0px;
	left: 0;
	width: 25%;
	height: calc(100% - 60px);
	background-color: rgba(255, 255, 255, 0.5);
	-webkit-transition: all linear 0.05s;
	transition: all linear 0.05s;
}

#ui2-treeview.collapsed {
	left: -25%;
}

/*#ui2-treeview.collapsed .treeview {
	display: none;
}
*/
#ui2-treeview .treeview {
	margin: 5px 5px 5px 25px;
	max-width: calc(100% - 30px);
}
/* ... */

